# IFT611_project

./: .gitignore  Cargo.toml  LICENSE  README.md  server_log.txt
benches/: benchmark_tests.rs  client_bench.rs  logger_bench.rs  server_bench.rs
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  common.rs  lib.rs  logger.rs  server.rs
src/client/: dummy_dot_product.rs  html.rs  mod.rs
src/logger/: log_level.rs  mod.rs
tests/: example.rs  test.rs
