[package]
name = "ift611_project"
version = "0.1.0"
authors = ["retardedpunk <beao3002@usherbrooke.ca>"]
edition = "2018"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "logger_bench"
harness = false

[[bench]]
name = "server_bench"
harness = false

[[bench]]
name = "client_bench"
harness = false

[dependencies]
csv = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tiny_http = "0.6.2"
reqwest = "0.9.11"
chrono = "0.4.6"
crossbeam = "0.7.1"
clap = "2.33.0"
circular-queue = "0.2.0"
